--- a/styles/style-02.css
+++ b/styles/style-02.css
@@ -12,7 +12,7 @@
 
 /* FONTS */
 
-@font-face { font-family: "Karrik-Regular";
+/* @font-face { font-family: "Karrik-Regular";
     src: url(../fonts/Karrik-Regular.otf) format('opentype'); }
 
 
@@ -20,12 +20,12 @@
 
 
 
-
+ */
 
 
 /* MEDIA QUERIES */ 
 
-@media (min-width: 750px)
+/* @media (min-width: 750px)
 { 
 
     main {
@@ -43,7 +43,7 @@
     div { 
     
     }
-}
+} */
 
 
 
@@ -52,7 +52,7 @@
 
 /* SET UP */
 
-body {
+/* body {
     background-color: var(--offwhite);
 }
 
@@ -80,10 +80,10 @@ a {
     display: block;
     min-height: 390px; 
     /* border: var(--black) solid 1px; */
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     justify-content: end;
-}
+} */
 
 
 
@@ -91,7 +91,7 @@ a {
 /* CLASSES */
 
 
-.entry01 {
+/* .entry01 {
     background-color: var(--red);
 }
 
@@ -111,4 +111,185 @@ a {
     background-color: var(--purple);
 }
 
- */ */
+ */
+
+
+ :root { 
+    /* --offwhite: #F1F1ED; */
+    --pale-yellow: #FEF8DF; 
+    /* --red: #FC010A;  */
+    /* --lightblue: #A5C8D1;  */
+    /* --green: #B4DA69;  */
+    /* --fuchsia: #E25BC1; */
+    /* --purple: #CE96C9; 
+    --blue: #458EF7; 
+    --ochre: #E9D374; */
+    --black: #000000;
+    --aquamarine: aquamarine; 
+
+    --red: #FD3D01; 
+    --lightblue: #6FA7AD ;
+    --green: #AEB847; 
+    --fuchsia: #D16ABC; 
+    --purple: #D8ADC1;
+    --blue: #5880DE; 
+    --ochre: #C3A569; 
+    
+
+
+    --helvetica: 'Helvetica-Bold';
+    --font-size: 16px;
+    --letter-spacing: -0.01em;   
+    --fig-caption: 14px;
+    --padding: 0.5em;
+    --phone: 2;
+    --tablet: 3;
+    --desktop: 4;
+    --gap: 2px;
+    --nav: 1em;
+      }
+
+
+/* FONTS */
+
+@font-face { font-family: "Karrik-Regular";
+    src: url(../fonts/Karrik-Regular.otf) format('opentype'); }
+
+
+ @font-face { font-family: "Helvetica-Bold";
+    src: url(../fonts/Helvetica-Bold.ttf) format('truetype'); }
+
+
+/* SET UP STYLES  */
+
+p { 
+    font-family: var(--helvetica);
+    font-size: var(--font-size);
+    letter-spacing: var(--letter-spacing);
+}
+
+body {
+    background-color: var(--pale-yellow);
+}
+
+nav { 
+    width: 100vw;
+    height: calc((var(--nav))*2);
+    position: fixed;
+    background-color: var(--pale-yellow);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+main {
+    display: grid;
+    grid-template-columns: repeat(var(--phone), 1fr);
+    gap: var(--gap);
+
+}
+
+a {
+    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    padding: var(--padding);
+
+
+}
+
+
+main section { aspect-ratio: 1; }
+
+
+div { display: flex; }
+
+
+
+
+/* CLASSES / SELECTORS */
+
+
+
+a { 
+    transition: all 0.5s ease-out;
+    transition-property: background-color;
+
+}
+
+a:hover, a:focus {
+    background-color: aquamarine;
+}
+
+
+/* section:nth-child(1) { background-color: var(--red); } */
+
+section:nth-child(2) { background-color: var(--lightblue); }
+
+section:nth-child(3) { background-color: var(--green); }
+
+section:nth-child(4) { background-color: var(--fuchsia); }
+
+section:nth-child(5) { background-color: var(--purple); }
+
+a:nth-child(6) { background-color: var(--blue); }
+
+a:nth-child(7) { background-color: var(--ochre); }
+
+a:nth-child(8) { background-color: var(--pale-yellow); }
+
+a:nth-child(9) { background-color: var(--pale-yellow); }
+
+a:nth-child(10) { background-color: var(--pale-yellow); }
+
+a:nth-child(11) { background-color: var(--pale-yellow); }
+
+.description { 
+    font-size: var(--fig-caption);
+    font-family: adobe-caslon-pro, serif;
+    font-weight: 400;
+    font-style: normal;
+    line-height: 120%; 
+    color: var(--black);
+    letter-spacing: normal;
+    margin-top: -0.1em;
+}
+
+.italic { 
+    font-family: adobe-caslon-pro, serif;
+    font-weight: 400;
+    font-style: italic;
+}
+
+
+
+/* MEDIA QUERIES */
+
+
+@media (min-width: 744px) 
+{
+    p { 
+        font-size: calc((var(--font-size))*1.25);
+    }
+
+    main {
+        grid-template-columns: repeat(var(--tablet), 1fr);
+        gap: calc((var(--gap))*2);
+    }
+
+    a { 
+        padding: calc((var(--padding))*2);
+    }
+
+
+}
+
+
+
+@media (min-width: 1440px)
+{
+    main {
+        grid-template-columns: repeat(var(--desktop), 1fr);
+    }
+}
