--- a/styles/style.css
+++ b/styles/style.css
@@ -148,6 +148,19 @@ a:nth-child(11) { background-color: var(--pale-yellow); }
 
 
 
+.one { 
+    background-color: var(--red);
+    transition: 0.3s;
+    transition-property: border-color, border-radius, border-width; 
+    transition-duration: 1s;
+    
+}
+
+.one:hover {  
+}
+
+
+
 /* MEDIA QUERIES */
 
 
