--- a/styles/style.css
+++ b/styles/style.css
@@ -96,15 +96,6 @@ div { display: flex; }
 
 
 
-a { 
-    transition: all 0.5s ease-out;
-    transition-property: background-color;
-
-}
-
-a:hover, a:focus {
-    background-color: aquamarine;
-}
 
 
 a:nth-child(1) { background-color: var(--red); }
@@ -121,7 +112,7 @@ a:nth-child(6) { background-color: var(--blue); }
 
 a:nth-child(7) { background-color: var(--ochre); }
 
-a:nth-child(8) { background-color: var(--pale-yellow); }
+a:nth-child(8) { background-color: var(--green); }
 
 a:nth-child(9) { background-color: var(--pale-yellow); }
 
@@ -148,16 +139,7 @@ a:nth-child(11) { background-color: var(--pale-yellow); }
 
 
 
-.one { 
-    background-color: var(--red);
-    transition: 0.3s;
-    transition-property: border-color, border-radius, border-width; 
-    transition-duration: 1s;
-    
-}
 
-.one:hover {  
-}
 
 
 
